--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -164,6 +163,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+.temp
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
